JumpScript/tests/baselines/reference/parserSymbolIndexer3.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.jump(2,5): error TS1071: 'static' modifier cannot appear on an index signature.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.jump (1 errors) ====
    class C {
        static [s: symbol]: string;
        ~~~~~~
!!! error TS1071: 'static' modifier cannot appear on an index signature.
    }